Adds sections: lists, tables

--- a/index.html
+++ b/index.html
@@ -234,12 +234,16 @@
                         <li><a href="#breadcrumbs">Breadcrumbs</a></li>
                       </ul>
                       <li><a href="#content">Content</a></li>
-                      <li><a href="#grid">Grid</a></li>
-                      <li><a href="#colour">Colour</a></li>
-                      <li><a href="#typography">Typography</a></li>
-                      <li><a href="#icons">Icons</a></li>
+                      <ul class="nested vertical menu">
+                        <li><a href="#grid">Grid</a></li>
+                        <li><a href="#colour">Colour</a></li>
+                        <li><a href="#typography">Typography</a></li>
+                        <li><a href="#icons">Icons</a></li>
+                        <li><a href="#lists">Lists</a></li>
+                        <li><a href="#tables">Tables</a></li>
+                        <li><a href="#images">Images</a></li>
+                      </ul>
                       <li><a href="#favicons">Favicons</a></li>
-                      <li><a href="#images">Images</a></li>
                       <li><a href="#helper-classes">Helper classes</a></li>
                     </ul>
                     <li><a href="#writing">Writing</a></li>
@@ -823,10 +827,14 @@
                 </table>
               </section>
 
-              <section id="favicons" data-magellan-target="favicons">
-                <h2>Favicons</h2>
-                <p>This template preloads the EMBL-EBI mark, supporting a range of browser tab icons, bookmarks, home screen icons, tab colours, and size/formats, including SVG.</p>
-                <p>If you need to generate a new set of favicons, we've found <a href="https://realfavicongenerator.net">RealFaviconGenerator.net</a> to generate a high quality output, and be easy to use.</p>
+              <section id="lists" data-magellan-target="lists">
+                <h2>Lists</h2>
+                <p>To come.</p>
+              </section>
+
+              <section id="tables" data-magellan-target="tables">
+                <h2>Tables</h2>
+                <p>To come.</p>
               </section>
 
               <section id="images" data-magellan-target="images">
@@ -874,6 +882,12 @@
 
                   <p>Notice that when linking the text automatically takes on a large font face and arrow. This style is best used as an image button to tease and link further content.</p>
 
+              </section>
+
+              <section id="favicons" data-magellan-target="favicons">
+                <h2>Favicons</h2>
+                <p>This template preloads the EMBL-EBI mark, supporting a range of browser tab icons, bookmarks, home screen icons, tab colours, and size/formats, including SVG.</p>
+                <p>If you need to generate a new set of favicons, we've found <a href="https://realfavicongenerator.net">RealFaviconGenerator.net</a> to generate a high quality output, and be easy to use.</p>
               </section>
 
               <section id="helper-classes" data-magellan-target="helper-classes">
