--- a/index.html
+++ b/index.html
@@ -1275,11 +1275,6 @@
   <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.10.2.min.js"><\/script>')</script>
   -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
-  <script type="text/JavaScript">$(document).foundation();</script>
-  <!--
-   -->
-
   <!-- Your custom JavaScript file scan go here... change names accordingly -->
   <!--
   <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/plugins.js"></script>
@@ -1289,6 +1284,15 @@
   <script defer="defer" src="https://khawkins98.github.io/EBI-Framework/js/foot.js"></script>
   <script defer="defer" src="https://khawkins98.github.io/EBI-Framework/js/script.js"></script>
 
+  <!-- The Foundation theme JavaScript -->
+  <script src="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
+  <script src="js/foundationExtendEBI.js"></script>
+  <script type="text/JavaScript">$(document).foundation();</script>
+  <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
+<!--
+   -->
+
+  
   <!-- Google Analytics details... -->
   <!-- Change UA-XXXXX-X to be your site's ID -->
   <!--
