Updates table documentation

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <h2>Grid</h2>
                 <p>Start by adding an element with a class of <code>.row</code>. This will create a horizontal block to contain vertical columns. Then add elements with a <code>.column</code> class within that row. You can use <code>.column</code> or <code>.columns</code>&mdash;the only difference is grammar. Specify the widths of each column with the <code>.small-#</code>, <code>.medium-#</code>, and <code>.large-#</code> classes.</p>
 
-                [reference FM6 docs...]
+                [reference F6 docs...]
 
               </section>
 
@@ -908,7 +908,7 @@
                 </table>
 
                 <h4>Responsive table</h4>
-                <p>You can use grid clases as well by giving the table <code>.responsive-table</code>.</p>
+                <p>Add the class <code>.responsive-table</code> to the <code>table</code> tag, and you'll be able to make use of <a href="#grid">the grid system of clases</a>, such as <code>.show-for-large-only</code>.</p>
 
                 <p>Note that this requires jQuery, as it will propogate the <code>th</code> classes to each <code>td</code>.</p>
 
@@ -1286,7 +1286,7 @@
 
   <!-- The Foundation theme JavaScript -->
   <script src="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
-  <script src="js/foundationExtendEBI.js"></script>
+  <script src="https://khawkins98.github.io/EBI-Framework/js/foundationExtendEBI.js"></script>
   <script type="text/JavaScript">$(document).foundation();</script>
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
 <!--
