Updates demo responsive table

--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                 </table>
 
                 <h4>Responsive table</h4>
-                <p>Add the class <code>.responsive-table</code> to the <code>table</code> tag, and you'll be able to make use of <a href="#grid">the grid system of clases</a>, such as <code>.show-for-large-only</code>.</p>
+                <p>Add the class <code>.responsive-table</code> to the <code>table</code> tag, and you'll be able to make use of <a href="#grid">the grid system of clases</a>, such as <code>.show-for-large</code>.</p>
 
                 <p>Note that this requires jQuery, as it will propogate the <code>th</code> classes to each <code>td</code>.</p>
 
@@ -916,7 +916,7 @@
                   <thead>
                     <tr>
                       <th class="show-for-small-only">Compact</th>
-                      <th class="show-for-large-only">Shown for large</th>
+                      <th class="show-for-large">Shown for large</th>
                       <th>Table Header</th>
                       <th>Table Header</th>
                     </tr>
