More table cleanup

--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
                     <tr>
                       <th class="small-5"></th>
                       <th class="small-1"></th>
-                      <th class="small-6">HTML</th>
-                      <th class="show-for-large">Drupal</th>
+                      <th class="small-6 kbd small">HTML</th>
+                      <th class="show-for-large kbd small">Drupal</th>
                     </tr>
                   </thead>
                   <tbody>
