Take serif off the demo

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               </div>
 
 
-          <div class="medium-9 columns serif sections">
+          <div class="medium-9 columns sections">
 
               <section id="overview" data-magellan-target="overview">
 
