Add meta-tag based background image assignment

--- a/sample-site/front_page.html
+++ b/sample-site/front_page.html
@@ -44,6 +44,9 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" media="all">
   -->
 
+  <!-- If you have a custome header image or colour -->
+  <meta name="ebi-localmasthead-color" content="#000">
+  <meta name="ebi-localmasthead-image" content="http://wwwdev.ebi.ac.uk/sites/ebi.ac.uk/files/field/image/embl-ebi-background.jpg">
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
