--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" media="all">
   -->
 
-  <!-- If you have a custome header image or colour -->
+  <!-- If you have a custom header image or colour -->
   <!-- 
   <meta name="ebi-localmasthead-color" content="#000">
   <meta name="ebi-localmasthead-image" content="http://wwwdev.ebi.ac.uk/sites/ebi.ac.uk/files/field/image/embl-ebi-background.jpg">
@@ -1249,6 +1249,7 @@
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
 <!--
    -->
+
 
   
   <!-- Google Analytics details... -->
